tests/ui/did_you_mean/sugg-stable-import-first-issue-140240.rs
fn main() {
    const _: Range = 0..1; //~ ERROR cannot find type `Range` in this scope
}
